libs/wingc/src/lsp/snapshots/completions/bring_suggestions_partial.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: aws
  kind: 9
  sortText: kk|aws
- label: cloud
  kind: 9
  sortText: kk|cloud
- label: ex
  kind: 9
  sortText: kk|ex
- label: fs
  kind: 9
  sortText: kk|fs
- label: http
  kind: 9
  sortText: kk|http
- label: math
  kind: 9
  sortText: kk|math
- label: regex
  kind: 9
  sortText: kk|regex
- label: sim
  kind: 9
  sortText: kk|sim
- label: testing
  kind: 9
  sortText: kk|testing
- label: util
  kind: 9
  sortText: kk|util
- label: "\"module\""
  kind: 15
  sortText: "ll|\"module\""
  insertText: "\"$1\" as $2"
  insertTextFormat: 2

