libs/wingc/src/lsp/snapshots/completions/call_struct_expansion.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: "a:"
  kind: 5
  detail: str
  documentation:
    kind: markdown
    value: "```wing\na: str\n```"
  sortText: "ab|a:"
  insertText: "a: $1"
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: assert
  kind: 3
  detail: "(condition: bool): void"
  documentation:
    kind: markdown
    value: "```wing\nassert: (condition: bool): void\n```\n---\nAsserts that a condition is true\n\n### Parameters\n- `condition` — The condition to assert"
  sortText: cc|assert
  insertText: assert($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: log
  kind: 3
  detail: "(message: str): void"
  documentation:
    kind: markdown
    value: "```wing\nlog: (message: str): void\n```\n---\nLogs a message\n\n### Parameters\n- `message` — The message to log"
  sortText: cc|log
  insertText: log($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: throw
  kind: 3
  detail: "(message: str): void"
  documentation:
    kind: markdown
    value: "```wing\nthrow: (message: str): void\n```\n---\nthrows an error\n\n### Parameters\n- `message` — The message to throw"
  sortText: cc|throw
  insertText: throw($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: x
  kind: 3
  detail: "preflight (arg1: A): void"
  documentation:
    kind: markdown
    value: "```wing\npreflight x: preflight (arg1: A): void\n```"
  sortText: cc|x
  insertText: x($0)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: A
  kind: 22
  documentation:
    kind: markdown
    value: "```wing\nstruct A\n```\n---\n### Fields\n- `a` — str"
  sortText: hh|A
- label: "inflight () => {}"
  kind: 15
  sortText: "ll|inflight () => {}"
  filterText: inflight
  insertText: "inflight ($1) => {$2}"
  insertTextFormat: 2

