libs/wingc/src/lsp/snapshots/completions/call_struct_expansion_partial_text.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: "two:"
  kind: 5
  detail: str
  sortText: "ab|a|two:"
  insertText: "two: $1"
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest

