libs/wingc/src/lsp/snapshots/completions/dot_before_returning_struct.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: s
  kind: 5
  detail: str
  sortText: ab|s

