libs/wingc/src/lsp/snapshots/completions/inside_class_declaration.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: new
  kind: 15
  sortText: ll|new
  insertText: "new($1) {\n\t$0\n}"
  insertTextFormat: 2

