libs/wingc/src/lsp/snapshots/completions/inside_class_declaration_empty.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: init
  kind: 15
  sortText: ll|init
  insertText: "init($1) {\n\t$2\n}"
  insertTextFormat: 2

