libs/wingc/src/lsp/snapshots/completions/json_literal_cast_inner.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: "durationThing:"
  kind: 5
  detail: duration
  documentation:
    kind: markdown
    value: "```wing\ndurationThing: duration\n```"
  sortText: "ab|a|durationThing:"
  insertText: "durationThing: $1"
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest

